# fastmcp-server-test

./: How to Run Server.txt  client.py  client2.py  expenses.db  main.py  main_01.py  mcp.json  pyproject.toml
